remove sonar smells